<resources>
    <string name="app_name">Tip Time</string>
    <string name="cost_of_service">Cost of Service</string>
    <string name="review_service_question">How was the service?</string>
    <string name="amazing_service_option">Amazing (20%)</string>
    <string name="good_service_option">Good (18%)</string>
    <string name="okay_service_option">Okay (15%)</string>
    <string name="round_up">Round up tip?</string>
    <string name="calculate_button">Calculate</string>
    <string name="tip_amount">Tip Amount: %s</string>
</resources>